Added a printable version of my CV

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Johan Wänglöf's Curriculum Vitae</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/print.css" />
     <link rel="stylesheet" type="text/css" href="css/fontello.css" />
 </head>
 <body>
@@ -27,6 +28,26 @@
             <label for="contact_modal" class="button">Contact</label>
         </div>
     </nav>
+
+    <!--Only visible on print-->
+    <div id="johan">
+        <h1>Johan Wänglöf's Curriculum Vitae</h1>
+        <h2>Print version</h2>
+        Printed from <a href="http://jwanglof.se/cv/">http://jwanglof.se/cv/</a>
+        <h2 class="contact-information">Contact information</h2>
+        <h3>Address</h3>
+        Johan Wänglöf
+        <br />
+        Björnkärrsgatan 13B.11
+        <br />
+        58436 Linköping
+
+        <h3>Phonenumber</h3>
+        <a href="tel:0046708101911">0046708601911</a>
+
+        <h3>E-mail</h3>
+        <a href="mailto:jwanglof@gmail.com">jwanglof@gmail.com</a>
+    </div>
 
     <main>
         <section class="flex four">
@@ -333,7 +354,7 @@
                 58436 Linköping
 
                 <h3>Phonenumber</h3>
-                070-86 01 911
+                <a href="tel:0046708101911">0046708601911</a>
 
                 <h3>E-mail</h3>
                 <a href="mailto:jwanglof@gmail.com">jwanglof@gmail.com</a>
