Changed some content on the CV

--- a/cv/index.html
+++ b/cv/index.html
@@ -182,9 +182,9 @@
                             <!--<div class="tab">-->
                                 Briteback is a start-up that builds a communication app that focuses on businesses. It combines e-mail, calendar and chat seamlessly where you can share an e-mail to a chat-room, to be able to discuss it further without having to forward it to the correct people, or vice versa, you can create an e-mail from a chat-message. I had many responsibilities since we were only a team of 6, and I were one of the first employees.
                                 <br />
-                                I set-up our infrastructure, I developed on both backend and frontend, and also helped choosing what technologies we should use when we started developing.
+                                I set-up our infrastructure, I developed on both backend and frontend, and also helped choosing what technologies we should use when we started developing. I worked at Briteback parallel while finishing my studies.
                                 <br />
-                                I'm still employed at Briteback but on a need-help basis, meaning that I will only work if they need help with anything that are within my areas at Briteback. This is an extra job which won't affect any other jobs I have.
+                                I'm still employed at Briteback but on a need-help basis, meaning that I will only work if they need help with anything that are within my areas at Briteback.
                             <!--</div>-->
                             <!--<div class="tab">-->
                                 <h3>Infrastructure</h3>
@@ -218,7 +218,7 @@
                         <!--<label class="pseudo button toggle" for="botillsammans-tab-long">Longer</label>-->
                         <!--<div class="row">-->
                             <!--<div class="tab">-->
-                                Bo Tillsammans (eng. Live Together) is Sweden's only service to promote communal-living in an easy way. The project was started by Hanna Söderquist in 2014 after noticing that Sweden doesn't have the same communal-living society as Germany have, where she studied for a couple of years. She started to look for developers and found me and Alexander Häger at Linköpings university, and we came up with the different ideas that are up on the site today.
+                                Bo Tillsammans (eng. Live Together) is Sweden's only service to promote communal-living in an easy way. The project was started by Hanna Söderquist in 2014 after noticing that Sweden doesn't have the same communal-living society as Germany have, where she studied for a couple of years. She started to look for developers and found me and Alexander Häger at Linköpings university, and we came up with the different ideas that are up on the site today. The site is a side-project that has been developed by us in parallel with both finishing my studies and working.
                                 <br />
                                 We created the site from the ground up using <a href="http://flask.pocoo.org/" target="_blank">Flask</a> (a Python microframework) as backend and <a href="https://angularjs.org/" target="_blank">AngularJS</a> as frontend-framework and the site is growing every day with new users that are looking for and offering accommodations.
                             <!--</div>-->
@@ -301,7 +301,13 @@
                         <span>06/2012 - 06/2014</span>
                     </div>
                     <div class="text">
-                        During my 2 years I had different responsibilities. When I was responsible for ordering drinks I had to do some light calculations to decide how much drinks to order for a night that between 800 and 1300 students attended. I also had to make a budget that was approved by our cashier. I learned how to work good in a group during very long and late hours. When I was responsible for a website I re-did a website from the ground since the code-base was made in old PHP and people had added stuff here and there so I decided to re-do the entire thing. The new site is written i Flask (Python) and is much faster and easy maintainable than the old one. I was also a cashier for a short period of time so I had to do some bookkeeping and approving budgets.
+                        I had different responsibilities during my 2 years;  beverages, website and cashier.
+                        <br />
+                        When I was responsible for beverages I had to do some light calculations to decide how much was needed for a night that between 800 and 1300 students attended. I also had to make a budget that was approved by our cashier. I learned how to work good in a group during very long and late hours.
+                        <br />
+                        When I was responsible for a website I re-did it from the ground since the old code-base was made in old PHP where different people, with different code standard, had developed different areas so I decided to re-do the entire site. The new site is written in Flask (Python) and is much faster and easier maintainable than the old one.
+                        <br />
+                        I was also a cashier for a short period of time so I had to do some bookkeeping and approving budgets.
                     </div>
                 </div>
 
