Added more text to BoTillsammans

--- a/cv/index.html
+++ b/cv/index.html
@@ -229,7 +229,7 @@
                                 The backend is written in Python, using Flask as framework. I really like Python and that's mainly why we chose Flask as backend framework.
 
                                 <h3>Frontend</h3>
-                                The frontend is based on AngularJS as frontend-framework, with CSS and HTML5. Alexander chose AngularJS since he needed it for a web-design course at the university.
+                                The frontend is based on AngularJS as frontend-framework, with CSS and HTML5. Alexander chose AngularJS since he needed it for a web-design course at the university. The code-base is from we started, with a few iterations on it, but I'm currently migrating to an ES6 syntax so it's nicer, and also so it makes it easier to transform the app to Angular 2 if we choose.
                             <!--</div>-->
                         <!--</div>-->
                     <!--</div>-->
