Added cover letter to print

--- a/cv/index.html
+++ b/cv/index.html
@@ -46,6 +46,8 @@
 
         <h4>E-mail</h4>
         <a href="mailto:jwanglof@gmail.com">jwanglof@gmail.com</a>
+
+        <h2>Cover letter</h2>
     </div>
 
     <main>
