--- a/cv/index.html
+++ b/cv/index.html
@@ -218,6 +218,17 @@
             </div>
 
             <div class="three-fourth">
+                <div class="work">
+                    <div class="title">
+                        <span>Automatic watering system</span>
+                        <span><i class="icon-at"></i><a href="https://github.com/jwanglof/automatic_watering_system" target="_blank">GitHub</a></span>
+                        <span>03/2016 - <i>present</i></span>
+                    </div>
+                    <div class="text">
+                        I "invented" an automatic watering system for a competition (an article in Swedish <a href="http://www.sweclockers.com/artikel/21903-tre-vinner-priser-i-intels-galileo-tavling-pa-dustin-expo-2016" target="_blank">here</a>) where I placed second. I was one out of eight that received an Intel Galileo Gen.2 with different sensors, and one of three that was invited to come to Dustin Expo, Globen, Stockholm, to show the automatic watering system. The website is made with Flask. This was the first IoT I created and I really enjoyed it.
+                    </div>
+                </div>
+
                 <!--Photographer-->
                 <div class="work">
                     <div class="title">
