Some more print styling

--- a/cv/index.html
+++ b/cv/index.html
@@ -31,7 +31,6 @@
     <!--Only visible on print-->
     <div id="johan">
         <h1>Johan Wänglöf's Curriculum Vitae</h1>
-        <h2>Print version</h2>
         Printed from <a href="http://jwanglof.se/cv/">http://jwanglof.se/cv/</a>
         <h2 class="contact-information">Contact information</h2>
         <h4>Address</h4>
@@ -48,6 +47,8 @@
         <a href="mailto:jwanglof@gmail.com">jwanglof@gmail.com</a>
 
         <h2>Cover letter</h2>
+        <div class="cover-letter">
+        </div>
     </div>
 
     <main>
