Added agile to Briteback

--- a/cv/index.html
+++ b/cv/index.html
@@ -133,7 +133,7 @@
                         <span><i class="icon-at"></i><a href="https://briteback.com" target="_blank">Briteback</a></span>
                         <span>04/2015 - <i>present</i></span>
                     </div>
-                    I set-up the infrastructure, I developed on both backend and frontend, and also helped choosing what technologies we should use when we started developing. I worked at Briteback parallel while finishing my studies.
+                    I set-up the infrastructure, developed on both backend and frontend, and also helped choosing what technologies we should use when we started developing. I worked at Briteback parallel while finishing my studies. We used both Scrum and Kanban while developing.
                     <h4>Infrastructure</h4>
                     I was in charge to set-up the infrastructure for the new version of Briteback, which needed to be easy to use for the employees. I chose to use Docker, with Docker Cloud, for easy development and maintenance. RethinkDB-servers run behind the containers with regular backups.
 
