More blog-posts

--- a/cv/index.html
+++ b/cv/index.html
@@ -46,7 +46,7 @@
         <h4>E-mail</h4>
         <a href="mailto:jwanglof@gmail.com">jwanglof@gmail.com</a>
 
-        <h2>Cover letter</h2>
+        <h2 style="display: none">Cover letter</h2>
         <div class="cover-letter">
         </div>
     </div>
@@ -152,7 +152,7 @@
                         <span>04/2014 - <i>present</i></span>
                     </div>
                     Bo Tillsammans (eng. Live Together) is Sweden's only service to promote communal-living in an easy way. The project was started by Hanna Söderquist in 2014 after noticing that Sweden doesn't have the same communal-living society as Germany have, where she studied for a couple of years. She started to look for developers and found me and Alexander Häger at Linköpings university, and we came up with the different ideas that are up on the site today. The site is a side-project that has been developed by us in parallel with both finishing my studies and working.
-                    <br />
+                    <br /><br /><br /><br />
                     We created the site from the ground up using <a href="http://flask.pocoo.org/" target="_blank">Flask</a> (a Python microframework) as backend and <a href="https://angularjs.org/" target="_blank">AngularJS</a> as frontend-framework and the site is growing every day with new users that are looking for and offering accommodations.
                     <h4>Infrastructure</h4>
                     We have gone through many iterations on our server with different configurations to find the correct one that scales well and is easily maintained. When we released our version 1.0 I re-did our server one more time, and now with Docker. I chose this configuration because I have really good experiences with Docker from my work at Briteback.
@@ -258,7 +258,7 @@
                         <span>12/2005 - 11/2006</span>
                     </div>
                     <div class="text">
-                        A guard soldier guards the military base against all unauthorized personnel. We also had areas outside the base that we had to go to when alarms went off. This experience taught me how to work good in a group when I was both stressed and didn’t had a lot of sleep.
+                        A guard soldier guards the military base against all unauthorized personnel. We also had areas outside the base that we had to go to when alarms went off. This experience taught me how to work good in a group when I was both stressed <br /><br />and didn’t had a lot of sleep.
                     </div>
                 </div>
 
