--- a/cv/index.html
+++ b/cv/index.html
@@ -36,9 +36,9 @@
         <h4>Address</h4>
         Johan Wänglöf
         <br />
-        Björnkärrsgatan 13B.11
+        Norrstrandsgatan 69b
         <br />
-        58436 Linköping
+        65464 Karlstad
 
         <h4>Phonenumber</h4>
         <a href="tel:0046708101911">0046708601911</a>
@@ -126,19 +126,35 @@
             </div>
 
             <div class="three-fourth">
+                <!--AF-->
+                <div class="work">
+                    <div class="title">
+                        <span>Developer, frontend lead</span>
+                        <span><i class="icon-at"></i><a href="https://briteback.com" target="_blank">ÅF</a></span>
+                        <span>09/2016 - <i>present</i></span>
+                    </div>
+                    I'm lead of the frontend at our customer. I develop both frontend and backend, also includes server-maintenance in various ways.
+                    
+                    <h4>Backend</h4>
+                    The backends/services/integrations are a mix written in Java, C#, Mule, and ASP.NET. Using JBoss for Java, IIS for C# and ASP.NET, and Mule's MMC for the Mule-projects.
+
+                    <h4>Frontend</h4>
+                    The frontends consist of AngularJS with ES5 syntax, with AJAX-calls to the backend. I'm lead to get the frontend on all projects up-to-date.
+                </div>
+                
                 <!--Briteback-->
                 <div class="work">
                     <div class="title">
                         <span>Developer</span>
                         <span><i class="icon-at"></i><a href="https://briteback.com" target="_blank">Briteback</a></span>
-                        <span>04/2015 - <i>present</i></span>
+                        <span>04/2015 - 10/2016</span>
                     </div>
                     I set-up the infrastructure, developed on both backend and frontend, and also helped choosing what technologies we should use when we started developing. I worked at Briteback parallel while finishing my studies. We used both Scrum and Kanban while developing.
                     <h4>Infrastructure</h4>
                     I was in charge to set-up the infrastructure for the new version of Briteback, which needed to be easy to use for the employees. I chose to use Docker, with Docker Cloud, for easy development and maintenance. RethinkDB-servers run behind the containers with regular backups.
 
                     <h4>Backend</h4>
-                    I created the skeleton that is used for all new servers Briteback creates. It consist of basic libraries that all the servers use and the folder-structure. All Briteback's servers are written in NodeJS with ES6 syntax.
+                    I created the skeleton that is used for all new servers Briteback creates. It consist of basic libraries that all the servers use and the folder-structure. All Briteback's servers are written in NodeJS with ES6 syntax, and using <a href="https://deepstreamhub.com/open-source" target="_blank">Deepstream</a> for websocket-communication.
 
                     <h4>Frontend</h4>
                     The frontend consist of BackboneJS and React with ES6 syntax. Since ES6 is used both on backend and frontend makes it easier to switch between them. The connection with the backend is based on WebSockets, with a wrapper called Deepstream that makes the communication via the WebSocket a bit easier and also gives more functions that makes working with data easier.
